# gtsam-sys

./: .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: test.yml
crates/gtsam-rs/: Cargo.toml
crates/gtsam-rs-compat/: Cargo.toml
crates/gtsam-rs-compat/src/: lib.rs
crates/gtsam-rs-discrete/: Cargo.toml
crates/gtsam-rs-discrete/src/: lib.rs
crates/gtsam-rs-inference/: Cargo.toml
crates/gtsam-rs-inference/src/: lib.rs
crates/gtsam-rs-linear/: Cargo.toml
crates/gtsam-rs-linear/src/: lib.rs
crates/gtsam-rs-math/: Cargo.toml
crates/gtsam-rs-math/src/: lib.rs
crates/gtsam-rs-navigation/: Cargo.toml
crates/gtsam-rs-navigation/src/: lib.rs
crates/gtsam-rs-navigation/tests/: gtsam_imu_parity.rs
crates/gtsam-rs-nonlinear/: Cargo.toml
crates/gtsam-rs-nonlinear/src/: lib.rs
crates/gtsam-rs-slam/: Cargo.toml
crates/gtsam-rs-slam/src/: lib.rs
crates/gtsam-rs/examples/: pose2_g2o.rs  pose3_g2o.rs
crates/gtsam-rs/src/: lib.rs
crates/gtsam-rs/tests/: gtsam_pose2_dataset.rs  pose_graph2.rs  pose_graph3.rs
gtsam/: CMakeLists.txt  gtsam_imu.cpp  gtsam_imu.hpp
src/: config.rs  lib.rs
tests/: imu_differential_oracle.rs  pure_rust_backend.rs
